--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/custom.css">
     <link href="http://fonts.googleapis.com/earlyaccess/notosansjp.css">
     <meta http-equiv="Cache-Control" content="no-cache">
-    <title>Tongara Ramen</title>
+    <title>セブツアー</title>
   </head>
   <body class="bg-light" ><!--style="padding-top: 75px; background-color: #EEEBE6;"-->
     <div class="wrap-video">
